# ubermagtable

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  REQUIREMENTS.txt  appveyor.yml  history.org  index.ipynb  make.bat  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tasks.py
.github/workflows/: publish.yml  test.yml  workflow.yml
binder/: environment.yml
dev/: FFT Development.ipynb
docker/: Dockerfile
docs/: Makefile  api-reference.rst  api_documentation.rst  conf.py  index.ipynb  index.rst  interact.rst  oommfodt.rst  table-basics.ipynb  table-fft.ipynb  table-interactive-plot.ipynb  table-merge.ipynb  table-visualisation.ipynb  table-widgets.ipynb  table.rst  tutorials.rst
docs/ipynb/: 00-tutorial-installation-testing-upgrade.ipynb  01-tutorial-reading.ipynb  02-tutorial-merging.ipynb  03-tutorial-other.ipynb  index.ipynb  installation-testing-update.ipynb  installation-testing-upgrade.ipynb  other.ipynb  table-basics.ipynb  table-fft.ipynb  table-interactive-plot.ipynb  table-merge.ipynb  table-visualisation.ipynb  table-widgets.ipynb  test_notebook.ipynb
docs/ipynb/macrospin/drive-0/: macrospin.odt
docs/macrospin/drive-0/: macrospin.odt
oommfodt/: __init__.py  mumaxtxt.py  oommfodt.py
oommfodt/tests/: test_init.py  test_mumaxtxt.py  test_oommfodt.py  test_ubermagtable.py
oommfodt/tests/test-files/: test_odt_file1.odt
oommfodt/tests/test_files/: file2.odt  file3.odt  odt-file1.odt  odt-file2.odt  odt-file3.odt  test_odt_file2.odt
oommfodt/tests/test_odt_files/: test_odt_file1.odt
oommfodt/tests/test_sample/: file4.odt  file5.odt  file8.odt  mumax_file1.txt
oommfodt/tests/test_sample/oommf_samples/: file7.odt
ubermagtable/: __init__.py  interact.py  table.py  ubermagtable.py
ubermagtable/tests/: conftest.py  test_init.py  test_interact.py  test_table.py  test_ubermagtable.py  test_util.py
ubermagtable/tests/test_sample/: mel_oommf_file.odt  oommf-hysteresis1.odt  oommf-issue1.odt  oommf-minsteps.odt  oommf-new-file1.odt  oommf-new-file2.odt  oommf-new-file3.odt  oommf-new-file4.odt  oommf-new-file5.odt  oommf-old-file6.odt  oommf_file1.odt
ubermagtable/util/: __init__.py  ubermagtable.py  util.py
